[gd_scene load_steps=4 format=2]

[ext_resource path="res://Login.gd" type="Script" id=1]
[ext_resource path="res://OpenSeed.png" type="Texture" id=2]
[ext_resource path="res://elements/OpenSeed.tscn" type="PackedScene" id=3]

[node name="Login" type="Control"]
margin_left = 360.0
margin_top = 97.0
margin_right = 648.0
margin_bottom = 447.0
rect_clip_content = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_top = 170.0
margin_right = 49.0
margin_bottom = 184.0
text = "Login"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="."]
anchor_left = 0.1
anchor_top = 0.54
anchor_right = 0.9
anchor_bottom = 0.59
margin_left = 1.90735e-06
margin_top = 20.0
margin_bottom = 27.65
placeholder_text = "Username"
__meta__ = {
"_edit_lock_": true
}

[node name="Passphrase" type="LineEdit" parent="."]
anchor_left = 0.1
anchor_top = 0.65
anchor_right = 0.9
anchor_bottom = 0.65
margin_left = 1.90735e-06
margin_top = 20.0
margin_bottom = 44.0
secret = true
placeholder_text = "Passphrase"
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.117647 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -71.5
margin_top = 7.0
margin_right = 889.5
margin_bottom = 893.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Okay" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -61.0
margin_top = -24.0
margin_right = -5.0
margin_bottom = -5.0
text = "Okay"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_right = 96.0
margin_bottom = -5.0
text = "New Account"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="notification" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.52
margin_left = -110.0
margin_top = 108.0
margin_right = 113.0
margin_bottom = 115.0
align = 1
valign = 1
autowrap = true

[node name="OpenSeed" parent="." instance=ExtResource( 3 )]
[connection signal="visibility_changed" from="." to="." method="_on_Login_visibility_changed"]
[connection signal="text_changed" from="Username" to="." method="_on_Username_text_changed"]
[connection signal="text_changed" from="Passphrase" to="." method="_on_Passphrase_text_changed"]
[connection signal="pressed" from="Okay" to="." method="_on_Okay_pressed"]
[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
